--- a/index.html
+++ b/index.html
@@ -11,7 +11,40 @@
 
     <div class="urna">
         <div class="tela">
-            tela
+            <div class="d-1">
+                <div class="d-1-left">
+                    <div class="d-1-1">
+                        <span>SEU VOTO PARA</span>
+                    </div>
+                    <div class="d-1-2">
+                        <span>VEREADOR</span>
+                    </div>
+                    <div class="d-1-3">
+                        <div class="numero pisca"></div>
+                        <div class="numero"></div>
+                    </div>
+                    <div class="d-1-4">
+                        Nome: FULANO DE TAL<br>
+                        Partido: QQQ<br>
+                        Vice-Prefeito: BELTRANO DE TAL
+                    </div>
+                </div>
+                <div class="d-1-right">
+                    <div class="d-1-image">
+                        <img src="img/candidate_7.jpg" alt="Prefeito">
+                        Prefeito
+                    </div>
+                    <div class="d-1-image small">
+                        <img src="img/candidate_8.jpg" alt="Vice-Prefeito">
+                        Vice-Prefeito
+                    </div>
+                </div>
+            </div>
+            <div class="d-2">
+                Aperte a tecla:<br>
+                CONFIRMA para CONFIRMAR este voto<br>
+                CORRIGE para REINICIAR este voto<br>
+            </div>
         </div>
         <div class="teclado">
             <div class="teclado-linha">
